Working docker services

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,60 +2,75 @@
 version: "3.2"
 
 volumes:
-  arango_data:
+  bel_arango_data:
     driver: local
-  elasticsearch_data:
+  bel_elasticsearch_data:
     driver: local
-  kibana_data:
+  bel_kibana_data:
     driver: local
 
 services:
 
   # Reverse proxy for BEL API and other web endpoints
   # http://localhost:8088
-  traefik:
-    image: traefik:1.3.0
-    container_name: traefik
+  bel_traefik:
+    image: traefik:latest
+    container_name: bel_traefik
     ports:
       - "80:80"
       - "443:443"
       - "8088:8088"
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
-      - ./traefik.toml:/traefik.toml
+      - ./traefik-dev.toml:/traefik.toml
       - ./tls:/tls
     # network_mode: "host"
 
   # ArangoDB - document/graph store - core requirement
   # http://localhost:8529
-  arangodb:
-    container_name: arangodb
+  bel_arangodb:
+    container_name: bel_arangodb
     image: arangodb:3.1.21
     ports:
       - "8529:8529"
     volumes:
-      - arango_data:/var/lib/arangodb3
+      - bel_arango_data:/var/lib/arangodb3
+    labels:
+      - traefik.enable=true
+      - traefik.backend=bel_arangodb
+      - traefik.frontend.rule=Host:arangodb.belapi.test
+      - traefik.port=8529
     environment:
       - ARANGO_NO_AUTH=1
     restart: always
 
   # Elasticsearch - terminology search - core requirement
   # http://localhost:9200
-  elasticsearch:
-    container_name: elasticsearch
+  bel_elasticsearch:
+    container_name: bel_elasticsearch
     # image: itzg/elasticsearch:5.1.2
-    image: docker.elastic.co/elasticsearch/elasticsearch:5.4.1  # dies before fully launching
+    image: docker.elastic.co/elasticsearch/elasticsearch:5.4.3  # dies before fully launching
     ports:
       - "9210:9200"
-      - "9310:9300"
-    expose:
-      - "9200"
-      - "9300"
     volumes:
-      - elasticsearch_data:/usr/share/elasticsearch/data
+      - bel_elasticsearch_data:/usr/share/elasticsearch/data
       - ./elasticsearch.yml:/conf/elasticsearch.yml
-    logging:
-      driver: none
+    # logging:
+    #   driver: none
+    environment:
+      - cluster.name=docker-cluster
+      - bootstrap.memory_lock=true
+      - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
+      - xpack.security.enabled=false
+      - xpack.watcher.enabled=false
+    ulimits:
+      memlock:
+        soft: -1
+        hard: -1
+    # deploy:
+    #   resources:
+    #     limits:
+    #       memory: 1g
     restart: always
 
   # BEL API - core requirement
@@ -68,12 +83,10 @@ services:
     ports:
       - "8010:8000"
     depends_on:
-      - elasticsearch
-      - arangodb
+      - bel_elasticsearch
+      - bel_arangodb
     volumes:
       - ./api:/app
-      - ./Config.py:/app/config.py
-      - ./Config.yml:/app/config.yml
     labels:
       - traefik.enable=true
       - traefik.backend=bel_api
@@ -84,8 +97,8 @@ services:
     restart: always
 
   # Run testing, documentation builds, misc ops and data mgmt (dev data, backups)
-  operations:
-    container_name: operations
+  bel_operations:
+    container_name: bel_operations
     image: operations:latest
     build:
       context: ./
@@ -97,31 +110,32 @@ services:
 
   # Optional for viewing Elasticsearch terminology search service
   # http://localhost:5601
-  kibana:
-    container_name: kibana
+  bel_kibana:
+    container_name: bel_kibana
     # image: kibana:5.1.2
-    image: docker.elastic.co/kibana/kibana:5.4.1  # must match elasticsearch image
+    image: docker.elastic.co/kibana/kibana:5.4.3  # must match elasticsearch image
     ports:
       - 5611:5601
     volumes:
-      - kibana_data:/usr/share/kibana/data
+      - bel_kibana_data:/usr/share/kibana/data
     labels:
       - traefik.enable=true
       - traefik.backend=kibana
       - traefik.frontend.rule=Host:kibana.belapi.test
-      - traefik.port=8080
+      - traefik.port=5601
     depends_on:
-      - elasticsearch
+      - bel_elasticsearch
     environment:
-      - ELASTICSEARCH_URL=http://elasticsearch:9200
-    logging:
-      driver: none
+      - ELASTICSEARCH_URL=http://bel_elasticsearch:9200
+      - xpack.security.enabled=false
+    # logging:
+    #   driver: none
     restart: always
 
   # Optional - for editing Swagger documents
   # http://localhost:8081
-  swagger_edit:
-    container_name: swagger_edit
+  bel_swagger_edit:
+    container_name: bel_swagger_edit
     image: swaggerapi/swagger-editor
     ports:
         - 8081:8080
@@ -136,8 +150,8 @@ services:
 
   # Optional - for viewing Swagger REST API documentation
   # http://localhost:8082
-  swagger_ui:
-    container_name: swagger_ui
+  bel_swagger_ui:
+    container_name: bel_swagger_ui
     image: swaggerapi/swagger-ui
     ports:
         - 8082:8080
