--- a/traefik-dev.toml
+++ b/traefik-dev.toml
@@ -1,4 +1,4 @@
-defaultEntryPoints = ["http", "https"]
+defaultEntryPoints = ["http"]
 
 # logLevel = "DEBUG"
 
@@ -9,14 +9,6 @@ defaultEntryPoints = ["http", "https"]
 [entryPoints]
 [entryPoints.http]
 address = ":80"
-# might need to disable following two lines to get first Let's Encrypt certs
-[entryPoints.http.redirect]
-entryPoint = "https"
-
-[entryPoints.https]
-address = ":443"
-[entryPoints.https.tls]
-
 
 ################################################################
 # Docker configuration backend
@@ -33,10 +25,3 @@ exposedbydefault = false
 # Use Swarm Mode services as data provider
 swarmmode = false
 
-# Let's Encrypt settings
-[acme]
-email = "whayes@openbel.org"
-storage = "acme.json"
-entryPoint = "https"
-onDemand = true
-OnHostRule = true
