--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -3,5 +3,10 @@ current_version = 0.1.0
 commit = True
 tag = True
 
-[bumpversion:file:Config.py]
-[bumpversion:file:Config.py]
+[bumpversion:file:VERSION]
+
+[bumpversion:file:./docs/api/openapi.yaml]
+search = version: "{current_version}"
+replace = version: "{new_version}"
+
+
