--- a/docs/api/schemas/nanopub.yaml
+++ b/docs/api/schemas/nanopub.yaml
@@ -1,37 +1,126 @@
 $schema: http://json-schema.org/draft-04/schema#
-id: http://json.schemastore.org/nanopub-1.0.0.json
-description: A nanopub file is either a single nanopub, an array of nanopubs or uses
+# id: http://json.schemastore.org/nanopub-1.0.0.json
+description: |
+  A nanopub file is either a single nanopub, an array of nanopubs or uses
   the JSON Lines (http://jsonlines.org/) format with a nanopub per line.
-oneOf:
-- $ref: '#/definitions/nanopub'
-- type: array
-  items:
-    $ref: '#/definitions/nanopub'
+
+  Note: This JSON schema is designed to work with the Swagger Specification as a
+  schema object which does not allow 'type' to be an array so not able to specify
+  optional elements as "type": ["string", "null"] for example.
+
+  Nanopubs can be stored as either individual JSON files with a single optional
+  metadata JSON file OR as collection using an array of JSON Nanopubs or a JSONLines
+  version where each line is a nanopub JSON object.  In an array or JSONLines
+  version, the metadata and schema_uri objects need to be at the top.
+
+  Obviously some combinations of the following objects in the anyOf below
+  are not compatible.  It doesn't make sense to use the nanopub object and
+  array of nanopub objects at the same time.
+
+anyOf:
+  - $ref: "#/definitions/schema_uri"
+  - $ref: "#/definitions/metadata"
+  - $ref: '#/definitions/nanopub'
+  - type: array
+    items:
+      anyOf:
+        - $ref: "#/definitions/schema_uri"
+        - $ref: '#/definitions/metadata'
+        - $ref: '#/definitions/nanopub'
+  - type: object
+    properties:
+      schema:
+        type: string
+
 definitions:
+
+  schema_uri_obj:
+    type: string
+    format: url
+    description: JSON Schema definition URI
+
+  schema_uri:
+    id: /definitions/schema
+    description: JSON Schema URI to validate this nanopub against it.
+    type: object
+    additionalProperties: false
+    required:
+      - schema_uri
+    properties:
+      schema_uri:
+        $ref: "#/definitions/schema_uri_obj"
+
+  metadata:
+    description: Nanopub collection metadata used to document and validate nanopub collection
+    type: object
+    required:
+      - metadata
+    description: suggested but not required properties are listed below
+    properties:
+      metadata:
+        type: object
+        additionalProperties: true
+        properties:
+          copyright:
+            type: string
+          collection_name:
+            type: string
+          description:
+            type: string
+            description: |
+              add any additional information here on why this collection was
+              created, what is consists of, additional contact instructions, etc
+          version:
+            type: string
+          license:
+            type: string
+          contact:
+            type: string
+            description: email address to contact for details on this nanopub collection
+          namespaces:
+            type: array
+            description: |
+              If using a namespace:value entity in your edge or context objects, this provides a
+              way of providing an abbreviated namespace to support an unambiguous
+              namespace value.
+            items:
+              type: object
+              properties:
+                name:
+                  type: string
+                uri:
+                  type: string
+                  format: uri
+
   nanopub:
-    id: /properties/nanopub
     description: Smallest unit of relational knowledge with context (see http://nanopub.org/)
     type: object
+    additionalProperties: false
     required:
       - nanopub
     properties:
       nanopub:
         type: object
+        additionalProperties: false
         required:
           - type
           - citation
-          - edge
+          - edges
         properties:
+          schema_uri:
+            $ref: "#/definitions/schema_uri_obj"
           id:
-            type: string
+            anyOf:
+              - type: string
+              - type: "null"
             description: ID of nanopub
-          schema:
-            type: string
-            format: url
-            description: JSON Schema definition
           type:
             description: 'Type of nanopub: BEL version 2.0, PEL, Legal, etc'
             type: object
+            additionalProperties: false
+            required:
+              - name
+              - version
             properties:
               name:
                 type: string
@@ -40,68 +129,89 @@ definitions:
                 type: string
                 description: Version of Nanopub type, e.g. 1.0.0
           context:
-            id: /nanopub/properties/annotations
-            description: Context of the edge (e.g for BEL nanopubs, the species, tissue, disease)
+            description: Context of the edge[s] (e.g for BEL nanopubs, the species, tissue, disease)
               state, ...
             type: array
             items:
               type: object
+              properties:
+                key:
+                  type: string
+                value:
+                  anyOf:
+                    - type: string
+                    - type: object
           citation:
-            id: /nanopub/properties/citation
             description: |
               Reference to the source. The specific type of nanopub may have
               specific objects required for citations (e.g. BEL citations).
               The following properties are optional.
             type: object
+            additionalProperties: true
+            required:
+              - citation
             properties:
-              type:
-                type: string
-                description: type of citation - should be a label such as Book, Web, Journal, etc.
-              uri:
-                type: string
-                format: uri
-                description: URL of this citation, e.g. a website cited should have this field
+              citation:
+                oneOf:
+                  - type: string
+                    format: uri
+                    description: URL of this citation, e.g. a website cited should have this field
+                  - type: object
+                    properties:
+                      source_db:
+                        type: string
+                        description: name of journal, book, website
+                      src_id:
+                        type: string
+                        description: Source ID of citation, e.g. Pubmed ID for Pubmed citations
+                  - type: string
+                    description: |
+                      Citation as single unparsed string, e.g.
+                      Edmunds W, Pebody R, et al. 2000. The sero-epidemiology of
+                      diptheria in Western Europe. Epidemiol Infect 125(1):113-25.
               authors:
                 type: array
                 items:
                   type: string
-              title:
-                type: string
-                description: Title of citation (journal article title, web page title, book chapter title)
               source_name:
                 type: string
                 description: name of journal, book, website
+              title:
+                type: string
+                description: Title of citation (journal article title, web page title, book chapter title)
               date_published:
                 type: string
                 description: ISO Date format, e.g. 20161231 for December 31, 2016
-              citation_string:
-                type: string
-                description: Citation as single unparsed string, e.g. "Tan, Amy. The Joy Luck Club. Penguin, 1989, p. 31."
-          edge:
-            id: /nanopub/properties/edge
-            type: object
-            required:
-              - subject
-            properties:
-              subject:
-                id: /nanopub/properties/edge/properties/subject
-                type: string
-              relation:
-                id: /nanopub/properties/edge/properties/relation
-                type: string
-              object:
-                id: /nanopub/properties/edge/properties/object
-                type: string
+
+          edges:
+            description: List of edges, minimum of 1 edge required, all edges must match context
+            type: array
+            minItems: 1
+            items:
+              type: object
+              properties:
+                edge:
+                  type: object
+                  additionalProperties: false
+                  required:
+                    - subject
+                  properties:
+                    subject:
+                      type: string
+                    relation:
+                      type: string
+                    object:
+                      type: string
+
           evidence:
-            id: /nanopub/properties/evidence
             description: Any specific summary text that serves as a basis for this edge and context.
             type: string
           metadata:
-            id: /nanopub/properties/metadata
             description: |
               Optional metadata elements - Creator information, creation date, additional notes, etc
               Any additional metadata elements can be added as needed.
             type: object
+            additionalProperties: true
             properties:
               creation_date:
                 type: string
@@ -124,8 +234,5 @@ definitions:
                 format: email
               status:
                 type: string
-                description: Status of nanopub - review means flagged to be reviewed
-                enum:
-                - draft
-                - review
-                - published
+                description: Status of nanopub - used for workflow management e.g. draft, review, published
+
