Working set of TermStore endpoints

--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -5,6 +5,10 @@ tag = True
 
 [bumpversion:file:VERSION]
 
+[bumpversion:file:./api/resources/status.py]
+search = version: "{current_version}"
+replace = version: "{new_version}"
+
 [bumpversion:file:./docs/api/openapi.yaml]
 search = version: "{current_version}"
 replace = version: "{new_version}"
