--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 elasticsearch==5.4.0
 python-arango==3.11.0
 falcon==1.3.0rc2
+falcon_auth==1.1.0
+falcon_cors==1.1.7
 gunicorn==19.7.1
 PyJWT==1.5.3
 itsdangerous==0.24
