fixed orthologs example

--- a/docs/belbio_api.yaml
+++ b/docs/belbio_api.yaml
@@ -987,7 +987,8 @@ paths:
                   ortholog:
                     type: string
                 example:
-                  ortholog: SP:Q19LI2
+                  orthologs:
+                    - SP:Q19LI2
         default:
           description: Error
           content:
