--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -6,6 +6,7 @@ pep8==1.7.0
 pyflakes==1.5.0
 pytest==2.8.1
 pytest-cache==1.0
+pytest-catchlog=1.2.2
 pytest-cov==2.4.0
 pytest-flakes==1.0.1
 pytest-mock==1.5.0
