--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -5,11 +5,11 @@ tag = True
 
 [bumpversion:file:VERSION]
 
-[bumpversion:file:./api/resources/status.py]
+[bumpversion:file:./bel_lang/__version__.py]
 search = version: "{current_version}"
 replace = version: "{new_version}"
 
-[bumpversion:file:./docs/api/openapi.yaml]
+[bumpversion:file:./docs/belbio_api.yaml]
 search = version: "{current_version}"
 replace = version: "{new_version}"
 
