Using Sphinx for documentation

--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -9,8 +9,11 @@ tag = True
 search = version: "{current_version}"
 replace = version: "{new_version}"
 
-[bumpversion:file:./docs/belbio_api.yaml]
+[bumpversion:file:./make_docs/belbio_api.yaml]
 search = version: "{current_version}"
 replace = version: "{new_version}"
 
+[bumpversion:file:./make_docs/sphinx/source/conf.py]
+search = version: "{current_version}"
+replace = version: "{new_version}"
 
